add contents to index.html and master.css files

--- a/WordCounter/Views/Home/Index.cshtml
+++ b/WordCounter/Views/Home/Index.cshtml
@@ -1,3 +1,12 @@
 @{
   Layout = "_Layout";
 }
+<div id="inputForm">
+  <form action="index.html" method="post">
+    <label for="word">Enter Search Word</label>
+    <input id="word" type="text">
+    <label for="sentence">Enter Sentence to be Searched</label>
+    <input id="sentence" type="text" size="35">
+    <button type="btn btn-info" name="button"></button>
+  </form>
+</div>
